dilang-interpreter/test/cases/errors/type_error_binop.di
fn main() {
    print(1 + "x")
}
